# Open-Electricity-Market

./: .gitignore  Caddyfile  README.md  compose.yml  package-lock.json
.github/config/linter-setup/: .eslintrc.yml
.github/workflows/: deploy.yml  linter.yml  newman.yml  node.js.yml  rust.yml  staging.yml
Documentation/: GitHub_Rules_and_Conventions.md
Frontend/: .dockerignore  .eslintrc.cjs  .gitignore  Caddyfile  Dockerfile  README.md  bun.lockb  compose.yml  package-lock.json  package.json  playwright.config.js  svelte.config.js  tailwind.config.cjs  vite.config.js
Frontend/playwright/: fixtures.js
Frontend/src/: app.html  index.test.js
Frontend/tests/: example.spec.js  signin.spec.js
Frontend/tests-examples/: demo-todo-app.spec.js
agent_stats/: average  go.mod  main.go  stats.txt
backend/: .dockerignore  Caddyfile  compose.yml  db.Dockerfile  dockerfile  init.sql  run.sh
backend/agent/: Cargo.toml  Dockerfile  diesel.toml
backend/agent/migrations/00000000000000_diesel_initial_setup/: down.sql
backend/agent/src/: agent.rs  claims.rs  consumer.rs  curve.rs  generator.rs  location.rs  main.rs  models.rs  net_structs.rs  node.rs  period.rs  producer.rs  schema.rs  smart_meter.rs  tests.rs
backend/agent/src/agent_manager/: mod.rs
backend/agent/src/agent_manager/consumer/: mod.rs
backend/agent/src/agent_manager/producer/: ideal_producer.rs  mod.rs
backend/agent/src/generator/production_curve/: mod.rs
backend/agent/src/smart_meter/consumption_curve/: mod.rs
backend/market-platform/: Cargo.toml  Dockerfile  diesel.toml
backend/market-platform/migrations/2024-05-28-185640_create_users/: down.sql  up.sql
backend/market-platform/migrations/2024-06-15-201801_create_advertisements/: down.sql  up.sql
backend/market-platform/migrations/2024-06-15-201858_create_transactions/: down.sql  up.sql
backend/market-platform/migrations/2024-06-16-135334_transactions_triggers/: down.sql  up.sql
backend/market-platform/migrations/2024-07-28-142007_create_nodes/: down.sql  up.sql
backend/market-platform/migrations/2024-07-29-194649_alter_users/: down.sql  up.sql
backend/market-platform/migrations/2024-07-30-085403_alter_nodes/: down.sql  up.sql
backend/market-platform/migrations/2024-08-23-111224_grid_history/: down.sql  up.sql
backend/market-platform/migrations/2024-08-28-062608_agent_history/: down.sql  up.sql
backend/market-platform/migrations/2024-08-30-080224_appliance_data/: down.sql  temp  temp2  temp3  up.sql
backend/market-platform/migrations/2024-08-30-124404_printer_3D_data/: down.sql
backend/market-platform/migrations/2024-08-30-124557_air_conditioner/: down.sql
backend/market-platform/migrations/2024-08-30-124830_air_purifier/: down.sql
backend/market-platform/migrations/2024-08-30-125006_boiler/: down.sql
backend/market-platform/migrations/2024-08-30-125143_coffee/: down.sql
backend/market-platform/migrations/2024-08-30-125827_washing_machine/: down.sql
backend/market-platform/migrations/2024-08-30-126001_computer/: down.sql
backend/market-platform/migrations/2024-08-30-126002_dehumidifier/: down.sql
backend/market-platform/migrations/2024-08-30-126003_dishwasher/: down.sql
backend/market-platform/migrations/2024-08-30-126004_dryer/: down.sql
backend/market-platform/migrations/2024-08-30-126005_fan/: down.sql
backend/market-platform/migrations/2024-08-30-126006_freezer/: down.sql
backend/market-platform/migrations/2024-08-30-126007_fridge/: down.sql
backend/market-platform/migrations/2024-08-30-126007_internet_router/: down.sql
backend/market-platform/migrations/2024-08-30-126008_laptop/: down.sql
backend/market-platform/migrations/2024-08-30-126009_micro_wave_oven/: down.sql
backend/market-platform/migrations/2024-08-30-126010_phone_charger/: down.sql
backend/market-platform/migrations/2024-08-30-126011_printer/: down.sql
backend/market-platform/migrations/2024-08-30-126012_radiator/: down.sql
backend/market-platform/migrations/2024-08-30-126013_screen/: down.sql
backend/market-platform/migrations/2024-08-30-126014_solar_panel/: down.sql
backend/market-platform/migrations/2024-08-30-126014_sound_system/: down.sql
backend/market-platform/migrations/2024-08-30-126015_tv/: down.sql
backend/market-platform/migrations/2024-08-30-126016_vaccuum/: down.sql
backend/market-platform/migrations/2024-09-05-100342_agent_procedures/: down.sql  up.sql
backend/market-platform/migrations/2024-09-17-093947_funds_changes/: down.sql  up.sql
backend/market-platform/src/: main.rs  models.rs  pg_functions.rs  schema.rs
backend/market-platform/src/analytics/: mod.rs
backend/market-platform/src/market_interaction/: mod.rs
backend/market-platform/src/node_management/: mod.rs
backend/market-platform/src/user_management/: mod.rs
backend/market-platfrom/: Cargo.toml  diesel.toml
backend/market-platfrom/src/: main.rs  models.rs  schema.rs
backend/matlab/: untitled.slx
backend/ml-api/: .dockerignore  Dockerfile  requirements.txt
backend/simulation/: Cargo.toml  Dockerfile  diesel.toml  interface.txt
backend/simulation/src/: claims.rs  grid.rs  grid_simulation.rs  main.rs  schema.rs
backend/simulation/src/grid/: circuit.rs  consumer.rs  generator.rs  load.rs  location.rs  tests.rs  transformer.rs  transmission_line.rs
backend/simulation/src/grid/consumer/: tests.rs
backend/simulation/src/grid/generator/: tests.rs
backend/simulation/src/grid/load/: tests.rs
backend/simulation/src/grid/transformer/: tests.rs
backend/simulation/src/grid/transmission_line/: tests.rs
backend/simulation/src/grid_simulation/: mod.rs  tests.rs
postman_tests/: Agent.postman_collection.json  MarketAdvisor.postman_collection.json  MarketPlatform.postman_collection.json  Open_em.postman_environment.json  Simulation.postman_collection.json
(+49 files in other folders)
