[package]
name = "agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
diesel = { version = "2.2.0", features = ["postgres","uuid"] }
dotenvy = "0.15"
uuid = "1.8.0"
reqwest = { version = "0.12", features = ["json","blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
