[package]
name = "agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = {version = "1.0.204", features = ["rc", "derive"]}
erased-serde = "0.4"
serde_json = "1.0.120"
tungstenite = "0.23.0"
dotenvy = "0.15.7"
reqwest = {version = "0.12.5", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rand = "0.8.5"
rocket = { version = "0.5.0", features= ["json"] }
diesel = {version = "2.2.2", features = ["postgres", "uuid", "chrono","serde_json"]}
uuid = "1.10.0"
