[package]
name = "agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = {version = "1.0.204", features = ["rc", "derive"]}
erased-serde = "0.4"
serde_json = "1.0.120"
tungstenite = "0.23.0"
dotenvy = "0.15.7"
tokio = {version = "1.40.0", features=["full"]} 
reqwest = {version = "0.12.7", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rand = "0.8.5"
rocket = { version = "0.5.1", features= ["json"] }
diesel = {version = "2.2.2", features = ["postgres", "uuid", "chrono","serde_json"]}
uuid = "1.10.0"
chrono = "0.4.23"
jsonwebtoken = { version = "8.1.1", default-features = false }
lazy_static = "1.4.0" 
