[package]
name = "market-platform"
version = "0.1.0"
edition = "2021"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
json = "0.12.4"
tokio = { version = "1", features = ["full"] }
rocket = { version = "0.5.0", features = ["json"] }
reqwest = { version = "0.12.5", default-features = false, features = ["blocking", "json", "rustls-tls"] }
deadqueue = "0.2.4"
diesel = {version = "2.1.6", features = ["postgres", "uuid", "chrono"]}
uuid = "1.8.0"
dotenvy = "0.15.7"
pwhash = "1.0.0"
chrono = "0.4.38"
regex = "1.10.6"
