[package]
name = "market-platform"
version = "0.1.0"
edition = "2021"

[dependencies]
json = "0.12.4"
tokio = { version = "1.40.0", features = ["full"] }
rocket = { version = "0.5.1", features = ["json"] }
reqwest = { version = "0.12.7", default-features = false, features = ["blocking", "json", "rustls-tls"] }
deadqueue = "0.2.4"
diesel = {version = "2.2.4", features = ["postgres", "uuid", "chrono"]}
uuid = "1.10.0"
dotenvy = "0.15.7"
pwhash = "1.0.0"
chrono = "0.4.38"
regex = "1.10.6"
jsonwebtoken = { version =  "9.3.0", default-features = false }
serde = { version = "1.0.210", features = ["derive"] }