[package]
name = "market-platfrom"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rocket = { version = "0.5.0", features = ["json"] }
reqwest = "0.12.4"
deadqueue = "0.2.4"
diesel = {version = "2.1.6", features = ["postgres", "uuid"]}
uuid = "1.8.0"
dotenvy = "0.15.7"
pwhash = "1.0.0"