[package]
name = "simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.204",features = ["rc", "derive"]}
rocket = { version = "0.5.0", features = ["json"] }
http = "0.2.12"
serde_json = "1.0.120"
ws = { package = "rocket_ws", version = "0.1.0" }
diesel = {version = "2.2.2", features = ["postgres", "uuid", "chrono","serde_json"]}
dotenvy = "0.15.7"
